@@ -215,6 +215,7 @@ jsp.dspace-admin.confirm-delete-format.returntoedit             = Return to the 
 jsp.dspace-admin.confirm-delete-format.title                    = Delete Bitstream Format
 jsp.dspace-admin.confirm-delete-format.warning                  = Any existing bitstreams of this format will be reverted to the <em>unknown</em> bitstream format.
 jsp.dspace-admin.confirm-delete-mdfield.confirm                 = Are you sure the field <strong>{0}</strong> should be deleted?
+jsp.dspace-admin.confirm-delete-mdfield.failed                  = Unable to delete this metadata field. This is most likely to be because it is referenced by at least one item.
 jsp.dspace-admin.confirm-delete-mdfield.heading                 = Delete Metadata Field: <code>{0}</code>
 jsp.dspace-admin.confirm-delete-mdfield.title                   = Delete Metadata Field
 jsp.dspace-admin.confirm-delete-mdfield.warning                 = This will result in an error if any items have values for this metadata field.
