@@ -9,6 +9,7 @@
  - Patch for SF feature request [1587270] Implicit group for all registered users
  - Fix for SF bug [2495728] 'My Account' disappears following exports
  - Update XMLUI Google Analytics code to match latest tracking code
+ - Fix for SF bug [1606439] Exception handling for deleting a metadata field
  
 (Stuart Lewis / Chris Yates / Flavio Botelho / Alex Barbieri / Reuben Pasquini)
  - [2057378] Hierarchical LDAP support
